Use Integer instead of BigInteger for support of Oracle JDBC interfaces ...